--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -638,6 +638,10 @@
       "address": "0x5Ca381bBfb58f0092df149bD3D243b08B9a8386e"
     },
     {
+      "symbol": "MYRIA",
+      "address": "0xA0Ef786Bf476fE0810408CaBA05E536aC800ff86"
+    },
+    {
       "symbol": "NEXO",
       "address": "0xB62132e35a6c13ee1EE0f84dC5d40bad8d815206"
     },
