MTL and myria fix

--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -630,6 +630,10 @@
       "address": "0x3c3a81e81dc49A522A592e7622A7E711c06bf354"
     },
     {
+      "symbol": "MTL",
+      "address": "0xF433089366899D83a9f26A773D59ec7eCF30355e"
+    },
+    {
       "symbol": "MUTE",
       "address": "0xA49d7499271aE71cd8aB9Ac515e6694C755d400c"
     },
