--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -571,7 +571,7 @@
     },
     {
       "symbol": "LYRA",
-      "address": "0x01BA67AAC7f75f647D94220Cc98FB30FCc5105Bf",
+      "address": "0x01BA67AAC7f75f647D94220Cc98FB30FCc5105Bf"
     },
     {
       "symbol": "LYXe",
