--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -127,6 +127,7 @@
   "skale-ima": true,
   "socket": true,
   "sollet": true,
+  "sophon": true,
   "sorare": true,
   "specular": true,
   "stack": true,
