--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -2423,5 +2423,37 @@
       },
       "coingeckoId": "usd-coin"
     }
+  ],
+  "zklinknova": [
+    {
+      "symbol": "BTCT",
+      "address": "0xFb8dBdc644eb54dAe0D7A9757f1e6444a07F8067",
+      "type": "EBV",
+      "formula": "totalSupply",
+      "bridgedUsing": {
+        "bridge": "TRON Foundation"
+      },
+      "coingeckoId": "bitcoin-trc20"
+    },
+    {
+      "symbol": "SolvBTC.m",
+      "address": "0xbEAf16cFD8eFe0FC97C2a07E349B9411F5dC272C",
+      "type": "EBV",
+      "formula": "totalSupply",
+      "bridgedUsing": {
+        "bridge": "Free Bridge"
+      },
+      "coingeckoId": "solv-btc"
+    },
+    {
+      "symbol": "M-BTC",
+      "address": "0x85D431A3a56FDf2d2970635fF627f386b4ae49CC",
+      "type": "EBV",
+      "formula": "totalSupply",
+      "bridgedUsing": {
+        "bridge": "Free Bridge"
+      },
+      "coingeckoId": "merlin-s-seal-btc"
+    }
   ]
 }
