--- a/packages/frontend2/package.json
+++ b/packages/frontend2/package.json
@@ -17,6 +17,7 @@
     "@trpc/client": "^11.0.0-rc.374",
     "@trpc/react-query": "^11.0.0-rc.374",
     "@trpc/server": "^11.0.0-rc.374",
+    "@vercel/flags": "^2.5.0",
     "next": "^14.2.2",
     "next-intl": "^3.14.1",
     "next-plausible": "^3.12.0",
