lol AI chore: Update Molten Token config to ignore additional properties
This commit updates the config file for Molten Token in the discovery/molten/arbitrum directory. It adds "feeOwner" and "owner" to the list of properties to ignore, and "circulatingSupply" and "totalSupply" to the list of properties to ignore in watch mode. These changes are made to improve the configuration and ensure that the specified properties are not considered during the discovery process.

--- a/packages/backend/discovery/molten/arbitrum/config.jsonc
+++ b/packages/backend/discovery/molten/arbitrum/config.jsonc
@@ -20,7 +20,8 @@
   },
   "overrides": {
     "Molten Token": {
-      "ignoreRelatives": ["lzEndpoint"]
+      "ignoreRelatives": ["lzEndpoint", "feeOwner", "owner"],
+      "ignoreInWatchMode": ["circulatingSupply", "totalSupply"]
     },
     "ChallengeManager": {
       "ignoreMethods": ["challenges"]
