--- a/packages/frontend2/package.json
+++ b/packages/frontend2/package.json
@@ -18,6 +18,8 @@
     "@trpc/react-query": "^11.0.0-rc.374",
     "@trpc/server": "^11.0.0-rc.374",
     "@vercel/flags": "^2.5.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "next": "^14.2.2",
     "next-intl": "^3.14.1",
     "next-plausible": "^3.12.0",
@@ -25,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
