--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -141,6 +141,7 @@
   "symbiosis": true,
   "synapse": true,
   "syndicateframe": true,
+  "sxt": true,
   "taiko": true,
   "ten": true,
   "termstructure": true,
