--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -151,6 +151,7 @@
   "xchain": true,
   "xdai": true,
   "xlayer": true,
+  "xpla": true,
   "zentachain": true,
   "zircuit": true,
   "zkcandy": true,
