--- a/packages/backend/discovery/zora/ethereum/config.jsonc
+++ b/packages/backend/discovery/zora/ethereum/config.jsonc
@@ -23,6 +23,9 @@
     "0x4a4962275DF8C60a80d3a25faEc5AA7De116A746": "ConduitMultisig" // Conduit Multisig
   },
   "overrides": {
+    "0x83A4521A3573Ca87f3a971B169C5A0E1d34481c3": {
+      "extends": "opstack/L1ERC721Bridge"
+    },
     "ConduitMultisig": {
       "ignoreInWatchMode": ["nonce"]
     },
@@ -34,9 +37,6 @@
     },
     "ZoraMultisig": {
       "ignoreInWatchMode": ["nonce"]
-    },
-    "L1CrossDomainMessenger": {
-      "extends": "opstack/L1CrossDomainMessenger"
     },
     "SystemConfig": {
       "extends": "opstack/SystemConfig"
