--- a/packages/backend/discovery/loopring/ethereum/config.jsonc
+++ b/packages/backend/discovery/loopring/ethereum/config.jsonc
@@ -18,6 +18,9 @@
     "0x52ea1971C05B0169c02a0bBeC05Fe8b5E3A24470"
   ],
   "overrides": {
+    "ForcedWithdrawalAgent": {
+      "description": "Auxiliary contract able to force withdrawals from L1 on behalf of users."
+    },
     "ExchangeV3": {
       "ignoreMethods": ["getBlockInfo"],
       "ignoreInWatchMode": [
