lzOnPzkEVM: Ignore LayerZeroMultisig nonce

--- a/packages/backend/discovery/lzomnichain/polygonzkevm/config.jsonc
+++ b/packages/backend/discovery/lzomnichain/polygonzkevm/config.jsonc
@@ -5,9 +5,13 @@
   "initialAddresses": ["0x9740FF91F1985D8d2B71494aE1A2f723bb3Ed9E4"],
   "names": {
     "0x9740FF91F1985D8d2B71494aE1A2f723bb3Ed9E4": "Endpoint",
-    "0xFe7C30860D01e28371D40434806F4A8fcDD3A098": "UltraLightNodeV2"
+    "0xFe7C30860D01e28371D40434806F4A8fcDD3A098": "UltraLightNodeV2",
+    "0x8df01A9F8bE5776F4280B7056e13A0Fc0E007827": "LayerZeroMultisig_pzkevm"
   },
   "overrides": {
+    "LayerZeroMultisig_pzkevm": {
+      "ignoreMethods": ["nonce"]
+    },
     "Endpoint": {
       "ignoreInWatchMode": ["isReceivingPayload", "isSendingPayload"],
       "fields": {
