--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -81,7 +81,6 @@
   "metis": true,
   "mint": true,
   "mode": true,
-  "molten": true,
   "morph": true,
   "multichain": true,
   "mxc": true,
@@ -123,6 +122,7 @@
   "rise": true,
   "ronin": true,
   "rss3": true,
+  "sanko": true,
   "satellite": true,
   "scroll": true,
   "skale-ima": true,
@@ -137,6 +137,7 @@
   "stealthchain": true,
   "superseed": true,
   "swell": true,
+  "sxt": true,
   "sygma": true,
   "symbiosis": true,
   "synapse": true,
