add nontemplate info

--- a/packages/backend/discovery/sanko/arbitrum/config.jsonc
+++ b/packages/backend/discovery/sanko/arbitrum/config.jsonc
@@ -2,7 +2,10 @@
   "$schema": "../../../../discovery/schemas/config.v2.schema.json",
   "chain": "arbitrum",
   "name": "sanko",
-  "initialAddresses": ["0x2f285781B8d58678a3483de52D618198E4d27532"],
+  "initialAddresses": [
+    "0x2f285781B8d58678a3483de52D618198E4d27532",
+    "0x847186fbeEBf41eEe9c230360D0bF8585c0Db57B"
+  ],
   "names": {
     "0x2f285781B8d58678a3483de52D618198E4d27532": "Bridge",
     "0x718E2a83775343d5c0B1eE0676703cBAF30CaFCD": "Inbox",
