--- a/packages/backend/discovery/taiko/ethereum/config.jsonc
+++ b/packages/backend/discovery/taiko/ethereum/config.jsonc
@@ -5,6 +5,7 @@
   "initialAddresses": ["0xd60247c6848B7Ca29eDdF63AA924E53dB6Ddd8EC"],
   "names": {
     "0xd60247c6848B7Ca29eDdF63AA924E53dB6Ddd8EC": "TaikoBridge",
+    "0x9CBeE534B5D8a6280e01a14844Ee8aF350399C7F": "TaikoAdmin",
     "0xEf9EaA1dd30a9AA1df01c36411b5F082aA65fBaa": "L1SharedAddressManager"
   },
   "overrides": {
