Shared poly cdk update: new zkEVM Rollup created

--- a/packages/backend/discovery/shared-polygon-cdk/ethereum/config.jsonc
+++ b/packages/backend/discovery/shared-polygon-cdk/ethereum/config.jsonc
@@ -85,18 +85,24 @@
           }
         },
         "rollupsData": {
-          "description": "Maps rollup contracts and their verifier. Any change either should be picked up also by the specific rollup config, unless it's a new rollup.",
+          "description": "Maps rollup contracts and their verifier. Any change should be picked up also by the specific rollup config, unless it's a new rollup. [rollupContract, chainID, verifier, rollupTypeID]",
           "severity": "MEDIUM",
           "handler": {
             "type": "array",
             "method": "rollupIDToRollupData",
             "startIndex": 1,
-            "pickFields": ["rollupContract", "verifier"],
+            "pickFields": [
+              "rollupContract",
+              "chainID",
+              "verifier",
+              "rollupTypeID"
+            ],
             "length": "{{ rollupCount }}",
             "ignoreRelative": true
           }
         },
         "rollupTypes": {
+          "description": "struct consensusImplementation, verifier, forkID, rollupCompatibilityID, bool obsolete, genesisBlock",
           "handler": {
             "type": "array",
             "method": "rollupTypeMap",
