--- a/packages/asset-risk/package.json
+++ b/packages/asset-risk/package.json
@@ -29,6 +29,7 @@
     "server-only": "^0.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.1",
     "viem": "^2.9.28",
     "wagmi": "^2.7.0",
     "zod": "^3.23.0"
