--- a/packages/frontend2/package.json
+++ b/packages/frontend2/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "build:dependencies": "cd ../.. && yarn build:dependencies",
     "start": "next start",
