Remove mergeMetaIntoConfig from package.json

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -28,8 +28,7 @@
     "powerdiff": "ts-node --transpile-only scripts/powerdiff.ts",
     "compare-orbit-chains": "ts-node --transpile-only scripts/compareOrbitChains.ts",
     "compare-opstack-chains": "ts-node --transpile-only scripts/compareOpStackChains.ts",
-    "compare-flat-sources": "ts-node --transpile-only scripts/compare-flat/index.ts",
-    "merge-meta-into-config": "ts-node --transpile-only scripts/mergeMetaIntoConfig.ts && yarn format:fix"
+    "compare-flat-sources": "ts-node --transpile-only scripts/compare-flat/index.ts"
   },
   "dependencies": {
     "@bugsnag/js": "^7.22.3",
