--- a/packages/frontend2/package.json
+++ b/packages/frontend2/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:dependencies": "cd ../.. && yarn build:dependencies",
     "start": "next start",
     "lint": "next lint",
     "format": "biome check .",
@@ -20,10 +21,12 @@
     "@vercel/flags": "^2.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "next": "^14.2.2",
     "next-intl": "^3.14.1",
     "next-plausible": "^3.12.0",
     "next-themes": "^0.3.0",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "superjson": "^2.2.1",
@@ -32,7 +35,9 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@types/lodash": "^4.17.4",
     "@types/node": "^20.11.16",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
