Re-enable frontend build in main package.json

--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
     "yarn": ">=1.22.0 <2"
   },
   "workspaces": {
-    "packages": [
-      "packages/*"
-    ]
+    "packages": ["packages/*"]
   },
   "scripts": {
-    "build": "turbo run build --filter=!asset-risk --filter=!frontend2",
+    "build": "turbo run build --filter=!asset-risk",
     "build:asset-risk": "turbo run build --filter=asset-risk",
     "build:backend": "turbo run build --filter=backend",
     "build:frontend": "turbo run build --filter=frontend",
