--- a/packages/backend/discovery/taiko/ethereum/config.jsonc
+++ b/packages/backend/discovery/taiko/ethereum/config.jsonc
@@ -4,11 +4,15 @@
   "name": "taiko",
   "initialAddresses": [
     "0xd60247c6848B7Ca29eDdF63AA924E53dB6Ddd8EC",
-    "0x06a9Ab27c7e2255df1815E6CC0168d7755Feb19a"
+    "0x06a9Ab27c7e2255df1815E6CC0168d7755Feb19a",
+    "0x68d30f47F19c07bCCEf4Ac7FAE2Dc12FCa3e0dC9",
+    "0x4cffe56C947E26D07C14020499776DB3e9AE3a23"
   ],
   "names": {
     "0xd60247c6848B7Ca29eDdF63AA924E53dB6Ddd8EC": "TaikoBridge",
     "0x06a9Ab27c7e2255df1815E6CC0168d7755Feb19a": "TaikoL1Contract",
+    "0x68d30f47F19c07bCCEf4Ac7FAE2Dc12FCa3e0dC9": "ProverSet",
+    "0x4cffe56C947E26D07C14020499776DB3e9AE3a23": "TierProvider",
     "0x579f40D0BE111b823962043702cabe6Aaa290780": "L1RollupAddressManager",
     "0x9CBeE534B5D8a6280e01a14844Ee8aF350399C7F": "TaikoAdmin",
     "0xEf9EaA1dd30a9AA1df01c36411b5F082aA65fBaa": "L1SharedAddressManager"
@@ -18,21 +22,61 @@
       "ignoreMethods": [
         "getMessageMinGasLimit", // too many values
         "context", // Multicall failed
-        "proxiableUUID" // Multicall failed
-      ]
+      ],
+      "fields": {
+        "proxiableUUID": {
+          "handler": {
+            "type": "call",
+            "method": "function proxiableUUID() view returns (bytes32)",
+            "args": [],
+            "expectRevert": true
+          }
+        }
+      }
     },
     "L1SharedAddressManager": {
       "ignoreMethods": ["proxiableUUID"]
     },
     "TaikoL1Contract": {
-      "ignoreMethods": [
-        "proxiableUUID" // Multicall failed
-      ]
+      "description": "This contract provides functionalities for proposing, proving, and verifying blocks.",
+      "fields": {
+        "proxiableUUID": {
+          "handler": {
+            "type": "call",
+            "method": "function proxiableUUID() view returns (bytes32)",
+            "args": [],
+            "expectRevert": true
+          }
+        }
+      },
     },
     "L1RollupAddressManager":{
-      "ignoreMethods": [
-        "proxiableUUID" // Multicall failed
-      ]
+      "fields": {
+        "proxiableUUID": {
+          "handler": {
+            "type": "call",
+            "method": "function proxiableUUID() view returns (bytes32)",
+            "args": [],
+            "expectRevert": true
+          }
+        }
+      },
+    },
+    "ProverSet":{
+      "description": "A contract that holds TKO token and acts as a Taiko prover. This contract will simply relay `proveBlock` calls to TaikoL1 so msg.sender doesn't need to hold any TKO.",
+      "fields": {
+        "proxiableUUID": {
+          "handler": {
+            "type": "call",
+            "method": "function proxiableUUID() view returns (bytes32)",
+            "args": [],
+            "expectRevert": true
+          }
+        }
+      }
+    },
+    "TierProvider":{
+      "ignoreMethods": ["getMinTier"] // too many values
     }
   }
 }
