--- a/packages/backend/discovery/taiko/ethereum/config.jsonc
+++ b/packages/backend/discovery/taiko/ethereum/config.jsonc
@@ -21,7 +21,7 @@
     "TaikoBridge": {
       "ignoreMethods": [
         "getMessageMinGasLimit", // too many values
-        "context", // Multicall failed
+        "context" // Multicall failed
       ],
       "fields": {
         "proxiableUUID": {
@@ -48,9 +48,9 @@
             "expectRevert": true
           }
         }
-      },
+      }
     },
-    "L1RollupAddressManager":{
+    "L1RollupAddressManager": {
       "fields": {
         "proxiableUUID": {
           "handler": {
@@ -60,9 +60,9 @@
             "expectRevert": true
           }
         }
-      },
+      }
     },
-    "ProverSet":{
+    "ProverSet": {
       "description": "A contract that holds TKO token and acts as a Taiko prover. This contract will simply relay `proveBlock` calls to TaikoL1 so msg.sender doesn't need to hold any TKO.",
       "fields": {
         "proxiableUUID": {
@@ -75,51 +75,51 @@
         }
       }
     },
-    "TierProvider":{
+    "TierProvider": {
       "ignoreMethods": ["getMinTier"], // too many values
       "fields": {
         // active tier args from TierProvider.getTierIds
-        "TIER_SGX" :{
+        "TIER_SGX": {
           "description": "verifierName, validityBond, contestBond, cooldownWindow, provingWindow, maxBlocksToVerifyPerProof",
           "handler": {
             "type": "call",
             "method": "function getTier(uint16 _tierId) pure returns (tuple(bytes32 verifierName, uint96 validityBond, uint96 contestBond, uint24 cooldownWindow, uint16 provingWindow, uint8 maxBlocksToVerifyPerProof))",
-            "args": [200],
+            "args": [200]
           }
         },
-        "TIER_GUARDIAN_MINORITY" :{
+        "TIER_GUARDIAN_MINORITY": {
           "description": "tuple args: verifierName, validityBond, contestBond, cooldownWindow, provingWindow, maxBlocksToVerifyPerProof",
           "handler": {
             "type": "call",
             "method": "function getTier(uint16 _tierId) pure returns (tuple(bytes32 verifierName, uint96 validityBond, uint96 contestBond, uint24 cooldownWindow, uint16 provingWindow, uint8 maxBlocksToVerifyPerProof))",
-            "args": [900],
+            "args": [900]
           }
         },
-        "TIER_GUARDIAN" :{
+        "TIER_GUARDIAN": {
           "description": "tuple args: verifierName, validityBond, contestBond, cooldownWindow, provingWindow, maxBlocksToVerifyPerProof",
           "handler": {
             "type": "call",
             "method": "function getTier(uint16 _tierId) pure returns (tuple(bytes32 verifierName, uint96 validityBond, uint96 contestBond, uint24 cooldownWindow, uint16 provingWindow, uint8 maxBlocksToVerifyPerProof))",
-            "args": [1000],
+            "args": [1000]
           }
         },
         // INACTIVE
-        "TIER_OPTIMISTIC":{
+        "TIER_OPTIMISTIC": {
           "description": "tuple args: verifierName, validityBond, contestBond, cooldownWindow, provingWindow, maxBlocksToVerifyPerProof",
           "handler": {
             "type": "call",
             "method": "function getTier(uint16 _tierId) pure returns (tuple(bytes32 verifierName, uint96 validityBond, uint96 contestBond, uint24 cooldownWindow, uint16 provingWindow, uint8 maxBlocksToVerifyPerProof))",
-            "args": [100],
+            "args": [100]
           }
         },
-        "TIER_SGX_ZKVM" :{
+        "TIER_SGX_ZKVM": {
           "description": "tuple args: verifierName, validityBond, contestBond, cooldownWindow, provingWindow, maxBlocksToVerifyPerProof",
           "handler": {
             "type": "call",
             "method": "function getTier(uint16 _tierId) pure returns (tuple(bytes32 verifierName, uint96 validityBond, uint96 contestBond, uint24 cooldownWindow, uint16 provingWindow, uint8 maxBlocksToVerifyPerProof))",
-            "args": [300],
+            "args": [300]
           }
-        },
+        }
       }
     }
   }
