--- a/packages/frontend2/package.json
+++ b/packages/frontend2/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
+    "markdown-it": "^14.1.0",
     "next": "^14.2.2",
     "next-intl": "^3.14.1",
     "next-plausible": "^3.12.0",
