--- a/packages/frontend2/package.json
+++ b/packages/frontend2/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.37.1",
+    "@tanstack/react-table": "^8.17.3",
     "@trpc/client": "^11.0.0-rc.374",
     "@trpc/react-query": "^11.0.0-rc.374",
     "@trpc/server": "^11.0.0-rc.374",
