add main page of assets risks

--- a/packages/frontend2/package.json
+++ b/packages/frontend2/package.json
@@ -22,6 +22,7 @@
     "@vercel/toolbar": "^0.1.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "connectkit": "^1.7.3",
     "lodash": "^4.17.21",
     "next": "^14.2.2",
     "next-intl": "^3.14.1",
@@ -32,6 +33,7 @@
     "react-dom": "^18.2.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.3.0",
+    "wagmi": "^2.9.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
