--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -81,10 +81,12 @@
   "metis": true,
   "mint": true,
   "mode": true,
+  "molten": true,
   "morph": true,
   "multichain": true,
   "mxc": true,
   "myria": true,
+  "myshell": true,
   "near": true,
   "nomad": true,
   "nova": true,
