--- a/packages/backend/discovery/fraxtal/ethereum/config.jsonc
+++ b/packages/backend/discovery/fraxtal/ethereum/config.jsonc
@@ -66,29 +66,7 @@
       "ignoreInWatchMode": ["messageNonce"]
     },
     "SystemConfig": {
-      "fields": {
-        // this overrides the batcherHash method return type (bytes32 -> address) so our discovery detects it as an address
-        "batcherHash": {
-          "handler": {
-            "type": "call",
-            "method": "function batcherHash() view returns (address)",
-            "args": []
-          }
-        },
-        "opStackDA": {
-          "handler": {
-            "type": "opStackDA",
-            "sequencerAddress": "{{ batcherHash }}"
-          }
-        },
-        "sequencerInbox": {
-          "handler": {
-            "type": "opStackSequencerInbox",
-            "sequencerAddress": "{{ batcherHash }}"
-          }
-        }
-      },
-      "ignoreInWatchMode": ["scalar"]
+      "extends": "opstack/SystemConfig"
     },
     "frxETHMinter": {
       "ignoreMethods": ["getValidator"],
