--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -120,6 +120,10 @@
       "address": "0x0D8775F648430679A709E98d2b0Cb6250d2887EF"
     },
     {
+      "symbol": "BAG",
+      "address": "0x808688c820ab080a6ff1019f03e5ec227d9b522b"
+    },
+    {
       "symbol": "BEL",
       "address": "0xA91ac63D040dEB1b7A5E4d4134aD23eb0ba07e14"
     },
