--- a/packages/backend/discovery/taiko/ethereum/config.jsonc
+++ b/packages/backend/discovery/taiko/ethereum/config.jsonc
@@ -32,9 +32,7 @@
         "getMessageMinGasLimit", // too many values
         "context" // Multicall failed
       ],
-      "ignoreInWatchMode": [
-        "nextMessageId"
-      ],
+      "ignoreInWatchMode": ["nextMessageId"],
       "fields": {
         "proxiableUUID": {
           "handler": {
