--- a/packages/frontend2/package.json
+++ b/packages/frontend2/package.json
@@ -13,6 +13,7 @@
     "format:fix": "biome check --apply ."
   },
   "dependencies": {
+    "@l2beat/shared-pure": "*",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.37.1",
     "@trpc/client": "^11.0.0-rc.374",
