add wallet page

--- a/packages/frontend2/package.json
+++ b/packages/frontend2/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.2.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.3.0",
+    "vaul": "^0.9.1",
     "wagmi": "^2.9.7",
     "zod": "^3.23.8"
   },
