--- a/packages/frontend2/package.json
+++ b/packages/frontend2/package.json
@@ -30,6 +30,7 @@
     "next-intl": "^3.14.1",
     "next-plausible": "^3.12.0",
     "next-themes": "^0.3.0",
+    "pino-pretty": "^11.1.0",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
