--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -2556,7 +2556,8 @@
       "address": "0x07d83526730c7438048D55A4fc0b850e2aaB6f0b",
       "category": "stablecoin",
       "type": "NMV",
-      "formula": "totalSupply"
+      "formula": "totalSupply",
+      "coingeckoId": "usd-coin"
     }
   ]
 }
