--- a/packages/frontend2/package.json
+++ b/packages/frontend2/package.json
@@ -30,6 +30,7 @@
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sharp": "^0.33.4",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
