--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -139,6 +139,7 @@
   "specular": true,
   "stack": true,
   "stargate": false,
+  "stargatev2": true,
   "starknet": true,
   "stealthchain": true,
   "superseed": true,
