--- a/packages/backend/discovery/stargatev2/ethereum/config.jsonc
+++ b/packages/backend/discovery/stargatev2/ethereum/config.jsonc
@@ -14,9 +14,63 @@
     "0x6b8aD17795d89B283e6D0362A87A403f3544bb9d": "CreditMessaging",
     "0x6d6620eFa72948C5f68A3C8646d58C00d3f4A980": "TokenMessaging",
     "0x5871A7f88b0f3F5143Bf599Fd45F8C0Dc237E881": "StargateMultiRewarder",
-    "0x1041D127b2d4BC700F0F563883bC689502606918": "Treasurer"
+    "0x1041D127b2d4BC700F0F563883bC689502606918": "Treasurer",
+    "0xbB2Ea70C9E858123480642Cf96acbcCE1372dCe1": "SendUln302",
+    "0xc02Ab410f0734EFa3F14628780e6e695156024C2": "ReceiveUln302",
+    "0x1a44076050125825900e736c501f859c50fE728c": "EndpointV2",
+    "0x173272739Bd7Aa6e4e214714048a9fE699453059": "LayerZero Executor",
+    "0x8FafAE7Dd957044088b3d0F67359C327c6200d18": "Stargate Verifier",
+    "0xa59BA433ac34D2927232918Ef5B2eaAfcF130BA5": "Nethermind Verifier"
   },
   "overrides": {
+    "Nethermind Verifier": {
+      "ignoreRelatives": ["workerFeeLib", "priceFeed"]
+    },
+    "EndpointV2": {
+      "description": "Its configuration and MessageLib to use is set for each OApp and destination by the OApp owner.",
+      "fields": {
+        "getRegisteredLibraries": {
+          "description": "MessageLibs registered for this Endpoint, enforcing the OApp owner's custom security stack.",
+          "severity": "HIGH"
+        },
+        "getSendLibrary": {
+          "handler": {
+            "type": "call",
+            "args": ["0x6d6620eFa72948C5f68A3C8646d58C00d3f4A980", 30110] // OApp (TokenMessaging), remoteEID (Arbitrum)
+          }
+        },
+        "getReceiveLibrary": {
+          "handler": {
+            "type": "call",
+            "args": ["0x6d6620eFa72948C5f68A3C8646d58C00d3f4A980", 30110] // OApp (TokenMessaging), remoteEID (Arbitrum)
+          }
+        }
+      }
+    },
+    "ReceiveUln302": {
+      "description": "Each MessageLib is an immutable verification library that OApp owners can point their OApp's Endpoint to.",
+      "fields": {
+        "getUlnConfig": {
+          "description": "The verification config of the Stargate Bridge OApp (TokenMessaging) for all messages coming from Arbitrum. (returns: [confirmations, requiredDVNCount, optionalDVNCount, optionalDVNThreshold, requiredDVNs, optionalDVNs])",
+          "handler": {
+            "type": "call",
+            "args": ["0x6d6620eFa72948C5f68A3C8646d58C00d3f4A980", 30110] // OApp (TokenMessaging), remoteEID (Arbitrum)
+          }
+        }
+      }
+    },
+    "SendUln302": {
+      "description": "Each MessageLib is an immutable verification library that OApp owners can point their OApp's Endpoint to.",
+      "fields": {
+        "getExecutorConfig": {
+          "description": "The executor config of the Stargate Bridge OApp (TokenMessaging) for all messages coming from Arbitrum. (returns: [maxMessageSize, Executor])",
+          "handler": {
+            "type": "call",
+            "args": ["0x6d6620eFa72948C5f68A3C8646d58C00d3f4A980", 30110] // OApp (TokenMessaging), remoteEID (Arbitrum)
+          }
+        }
+      }
+    },
     "TokenMessaging": {
       "description": "This is a Layer Zero OApp. It also handles the batching logic: bus, taxi, quotes"
     },
