--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -21,7 +21,7 @@
     "tokens": "node -r esbuild-register scripts/tokens/tokens.ts",
     "tokens:verify": "sh scripts/tokens/verify.sh",
     "coingecko:platforms": "node -r esbuild-register scripts/getCoingeckoPlatforms.ts",
-    "stargatev2": "node -r esbuild-register scripts/stargatev2"
+    "stargatev2-pools": "node -r esbuild-register scripts/stargatev2-pools"
   },
   "dependencies": {
     "@l2beat/backend-tools": "*",
