add linea escrows

--- a/packages/backend/discovery/stargatev2/linea/config.jsonc
+++ b/packages/backend/discovery/stargatev2/linea/config.jsonc
@@ -18,11 +18,26 @@
             "type": "array",
             "method": "stargateImpls",
             "startIndex": 1,
-            "length": "{{ maxAssetId }}",
-            "ignoreRelative": true
+            "length": "{{ maxAssetId }}"
           }
         }
       }
+    },
+    "0x81F6138153d473E8c5EcebD3DC8Cd4903506B075": {
+      "ignoreRelatives": [
+        "endpoint",
+        "getAddressConfig",
+        "lpToken",
+        "owner",
+        "token"
+      ],
+      "ignoreInWatchMode": [
+        "plannerFee",
+        "poolBalance",
+        "treasuryFee",
+        "tvl",
+        "getTransferGasLimit"
+      ]
     }
   }
 }
